--- a/index.hbs
+++ b/index.hbs
@@ -3,6 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <link href="https://fonts.googleapis.com/css?family=Fira+Sans:300,400,500&display=swap" rel="stylesheet">
+  <script src="https://yandex.st/jquery/2.2.3/jquery.min.js" type="text/javascript"></script>
   <script src="https://api-maps.yandex.ru/2.1/?apikey=d719787b-77e7-4c71-947f-aef1414b8c9c&lang=ru_RU" type="text/javascript">
     </script>
   <title>{{htmlWebpackPlugin.options.title}}</title>
