--- a/src/templates/geo-content.hbs
+++ b/src/templates/geo-content.hbs
@@ -1,4 +1,4 @@
-<div id="map" style="width: 100%; height: 100vh"></div>
+<div id="map" style="width: 100%; height: 100%"></div>
 <div class="popup">
     <div class="popup__title">
         <div class="popup__title-logo">
@@ -9,7 +9,7 @@
     </div>
     <div class="popup__comments">
         <ul class="popup__comments-list">
-           <li class="popup__comments-item">
+           {{!-- <li class="popup__comments-item">
                <div class="popup__comments-info">
                    <span class="popup__info-name">svetlana</span>
                    <span class="popup__info-title">Шоколадница </span>
@@ -40,10 +40,10 @@
                    <span class="popup__info-date">13.12.2015</span>
                </div>
                <div class="popup__comments-text">Очень хорошее место!</div>
-           </li> 
+           </li>  --}}
         </ul>
     </div>
-    <div class="popup__form">
+    <div class="popup__form">       
         <h2 class="popup__form-title">ВАШ ОТЗЫВ</h2>
         <div class="popup__form-row">
             <input type="text" name="name" class="popup__form-input" placeholder="Ваше имя">
@@ -60,4 +60,4 @@
 
     </div>
 </div>
-<i class="fa fa-map-marker fa-map-marker--map" aria-hidden="true"></i>
+{{!-- <i class="fa fa-map-marker fa-map-marker--map" aria-hidden="true"></i> --}}
